--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-python-telegram-bot==20.7
-phonenumbers==8.13.27
-psycopg2-binary==2.9.9
-python-dotenv==1.0.0
+python-telegram-bot
+phonenumbers
+psycopg2-binary
+python-dotenv
